apps/n8n/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
spec:
  rules:
    - host: n8n.dev.jamaguchi.xyz
